# serverless-fastapi-scheduler-template

./: .env.example  .gitignore  LICENSE  MIGRATION.md  Makefile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml
.github/workflows/: ci.yml  deploy.yml
src/app/: main.py
src/app/api/v1/: health.py
src/app/core/: config.py
src/app/services/: sample_service.py
src/handlers/: http_handler.py  task_handlers.py
src/tasks/: nightly_cleanup.py  sync_things.py
tests/integration/: test_api_httpx.py
tests/unit/: test_health.py  test_tasks.py
