[project]
name = "serverless-fastapi-scheduler-template"
version = "0.3.0"
description = "FastAPI on AWS Lambda with Serverless v4, EventBridge Rule scheduling (UTC), offline emulation, tests, CI/CD."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "fastapi>=0.115",
  "mangum>=0.17",
  "uvicorn>=0.30",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
